[package]
name = "randid"
description = "Randid (pronounced like random but with `-id` instead of `-om`) is a minimalistic, web-safe library for generating customisable IDs for use in primarily web applications."
readme = "README.md"
repository = "https://gitlab.com/owez/randid"
version = "0.1.0"
authors = ["Owez <owez@scalist.net>"]
edition = "2018"

[dependencies]
rand = "0.7"
